--- a/public/css/general-styles.css
+++ b/public/css/general-styles.css
@@ -25,6 +25,11 @@ button > i {
     margin-left: 5px;
 }
 
+pre {
+    text-align: left;
+    direction: ltr;
+}
+
 .spinner {
     border: 4px solid #f0f0f0;
     border-radius: 50%;
@@ -42,6 +47,13 @@ button > i {
     border-top-color: #fff;
 }
 
+.btn-block {
+    display: block;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+}
+
 /* Safari */
 @-webkit-keyframes spin {
     0% { -webkit-transform: rotate(0deg); }
@@ -51,4 +63,33 @@ button > i {
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #62868A;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #62868A;
+}
+
+.tile {
+    background-color: #fcfcfc;
+    border-radius: 15px;
+    box-shadow: 4px 4px 8px #ccc;
+    padding: 30px 20px;
 }
